--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
 	<head>
-		<meta charset="UTF-8">
+		<meta charset="utf-8">
 		<title>Выполнение домашнего задания PHP от 17.01.2017</title>
+        <link rel="stylesheet" href="/style/style.css">
 	</head>
 	<body>
 		<h1>Выполнение домашнего задания PHP от 17.01.2017</h1>
@@ -100,7 +101,7 @@
                 </a>
             </li>
             <li>
-                <a href="php_basics_tasks/load.php?task=15">
+                <a href="php_basics_tasks/calculator.php">
                     Написать калькулятор. Переменная $a = изменяемое число.
                     Переменная $b = изменяемое число.
                     Переменная $operator = ‘+’ или ‘-’ или ‘/’ или ‘*’ или '%' (остаток от деления).<br>
@@ -108,6 +109,73 @@
                     Не забудьте про деление на 0, если надо - выдавать ошибку что на 0 делить нельзя.
                 </a>
             </li>
+            <li>
+                <a href="php_basics_tasks/load.php?task=16">
+                    Создайте две переменные $a и $b, значения которых будут числами.
+                    Выведите максимальное число из этих двух.
+                </a>
+            </li>
+            <li>
+                <a href="php_basics_tasks/load.php?task=17">
+                    Создайте две переменные $a = '78' (строковый тип) и $b = 78 (целочисленный тип).
+                    Проверьте эти две переменные на равность, с помощью if выведите "равны" или "не равны".
+                </a>
+            </li>
+            <li>
+                <a href="php_basics_tasks/load.php?task=18">
+                    Создайте две переменные $a = '78' (строковый тип) и $b = 78 (целочисленный тип).
+                    Проверьте эти две переменные на эквивалентность, с помощью if выведите "эквивалентны"
+                    или "не эквивалентны".
+                </a>
+            </li>
+            <li>
+                <a href="php_basics_tasks/load.php?task=19">
+                    Выведите результат сравнения $a и $b из п.17 с помощью var_dump.
+                </a>
+            </li>
+            <li>
+                <a href="php_basics_tasks/load.php?task=20">
+                    Приведите число 20 к типу boolean. Объясните результат.
+                </a>
+            </li>
+            <li>
+                <a href="php_basics_tasks/load.php?task=21">
+                    Приведите число 0 к типу boolean. Объясните результат.
+                </a>
+            </li>
+            <li>
+                <a href="php_basics_tasks/load.php?task=22">
+                    Приведите число -20 к типу boolean. Объясните результат.
+                </a>
+            </li>
+            <li>
+                <a href="php_basics_tasks/load.php?task=23">
+                    Напишите 3 строки, используя три разные функции для вывода текста.
+                </a>
+            </li>
+            <li>
+                <a href="php_basics_tasks/load.php?task=24">
+                    Создайте в файле 3 комментария тремя разными типами.
+                </a>
+            </li>
+            <li>
+                <a href="php_basics_tasks/load.php?task=25">
+                    Приведите пример, чем отличается &lt;?php от &lt;?=.
+                </a>
+            </li>
+            <li>
+                <a href="php_basics_tasks/load.php?task=26">
+                    Объявите константу DAYS_COUNT равную 7 и константу MONTH_COUNT равную 12
+                    двумя разными способами объявления констант.
+                </a>
+            </li>
+            <li>
+                <a href="php_basics_tasks/load.php?task=27">
+                    Выполните скрипт по задаче №4 из консоли (необходимо запустить php скрипт по задаче №4
+                    из командной строки).
+                </a>
+            </li>
 		</ol>
+        <br>
 	</body>
 </html>
